--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Vinicius Senna
 baseurl: "/slim"
-url: "http://vsenna.github.io"
+url: "http://vsenna.github.com"
 
 # Build settings
 markdown: redcarpet
