--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: "/slim"
 url: "http://vsenna.github.com"
 
 # Build settings
-#markdown: redcarpet
+markdown: redcarpet
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink: pretty
